<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.loginWithPassword.LoginWithPasswordFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_image"
        android:layout_width="156dp"
        android:layout_height="147dp"
        android:layout_marginTop="@dimen/dp80"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/foreground_grey"
        app:cardCornerRadius="100dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgPhotoProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_add_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp24"
        android:layout_marginBottom="@dimen/dp24"
        app:cardCornerRadius="@dimen/dp8"
        app:cardElevation="4dp"
        app:cardBackgroundColor="#EDFFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_image">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_login_email_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_login_with_email_password"
                android:textSize="20sp"
                android:textColor="@color/blue"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/dp24"/>

            <TextView
                android:id="@+id/tv_login_touch_id_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp24"
                android:text="@string/tv_login_touch_id_description_email"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_email_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPass"
                style="@style/MyLayoutInputTextOutline"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp35"
                app:endIconMode="password_toggle"
                app:helperText="@string/pass_label"
                android:layout_marginStart="@dimen/dp24"
                android:layout_marginEnd="@dimen/dp24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_login_touch_id_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:textColor="@color/colorGray1"
                    android:textSize="@dimen/sp16"
                    app:fontFamily="@font/roboto_medium"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_fingerprint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                app:layout_constraintEnd_toEndOf="@+id/tilPass"
                app:layout_constraintTop_toBottomOf="@+id/tilPass" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_fingerprint_login"
                app:layout_constraintBottom_toBottomOf="@id/sw_fingerprint"
                app:layout_constraintEnd_toStartOf="@id/sw_fingerprint"
                app:layout_constraintTop_toTopOf="@+id/sw_fingerprint" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                style="@style/Button.GradientBorderRounded"
                android:backgroundTint="@color/gray2"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp24"
                android:layout_weight="1"
                android:enabled="false"
                android:paddingHorizontal="@dimen/dp24"
                android:text="@string/log_in"
                android:layout_marginBottom="@dimen/dp50"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sw_fingerprint" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>