<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray3"
    android:padding="16dp"
    tools:context=".ui.login.loginWithGoogle.LoginWithGoogleFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/btn_image"
        android:layout_width="156dp"
        android:layout_height="147dp"
        android:layout_marginTop="@dimen/dp80"
        app:cardCornerRadius="100dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgPhotoProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_add_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp24"
        android:layout_marginBottom="@dimen/dp24"
        app:cardBackgroundColor="#EDFFFFFF"
        app:cardCornerRadius="@dimen/dp8"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_image">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_login_touch_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp24"
                android:text="@string/label_login_with_google"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_login_touch_id_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp24"
                android:layout_marginTop="@dimen/dp24"
                android:layout_marginEnd="@dimen/dp24"
                android:text="@string/tv_google_description"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_touch_id" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_goggle_session"
                android:layout_width="232dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp50"
                android:layout_marginBottom="@dimen/dp80"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@drawable/foreground_grey"
                android:minHeight="48dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_login_touch_id_description">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="start|center"
                    android:orientation="horizontal"
                    android:padding="4dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:contentDescription="@string/todo"
                        android:src="@drawable/google" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/label_google_session"
                        android:textAlignment="center"
                        android:textColor="#1565C0"
                        android:textSize="16sp" />
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>