<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.logout.LogoutFragment"
    android:background="@color/gray3">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/dp16"
        app:cardCornerRadius="@dimen/dp8"
        app:cardElevation="4dp"
        app:cardBackgroundColor="#EDFFFFFF">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dp16"
            android:layout_marginEnd="@dimen/dp16"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/MyLayoutInputTextOutline"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp24"
                app:endIconMode="clear_text"
                app:helperText="@string/email_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorGray1"
                    android:textSize="@dimen/sp16"
                    app:fontFamily="@font/roboto_medium"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPass"
                style="@style/MyLayoutInputTextOutline"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp35"
                app:endIconMode="password_toggle"
                app:helperText="@string/pass_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilEmail">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:textColor="@color/colorGray1"
                    android:textSize="@dimen/sp16"
                    app:fontFamily="@font/roboto_medium"
                    tools:ignore="SpeakableTextPresentCheck" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sw_fingerprint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                app:layout_constraintEnd_toEndOf="@+id/tilPass"
                app:layout_constraintTop_toBottomOf="@+id/tilPass"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_fingerprint_login"
                app:layout_constraintBottom_toBottomOf="@id/sw_fingerprint"
                app:layout_constraintEnd_toStartOf="@id/sw_fingerprint"
                app:layout_constraintTop_toTopOf="@+id/sw_fingerprint" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                style="@style/Button.GradientBorderRounded"
                android:backgroundTint="@color/white"
                android:textColor="@color/blue2"
                app:strokeWidth="@dimen/dp2"
                app:strokeColor="@color/blue2"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp20"
                android:layout_marginTop="@dimen/dp50"
                android:layout_marginEnd="@dimen/dp8"
                android:layout_weight="1"
                android:text="@string/sing_in"
                android:enabled="false"
                app:layout_constraintEnd_toStartOf="@id/guideline2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sw_fingerprint" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                style="@style/Button.GradientBorderRounded"
                android:backgroundTint="@color/gray2"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp8"
                android:layout_marginEnd="@dimen/dp20"
                android:layout_weight="1"
                android:text="@string/log_in"
                android:enabled="false"
                app:layout_constraintBottom_toBottomOf="@id/btnRegister"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline2"
                app:layout_constraintTop_toTopOf="@id/btnRegister" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/containerGoogleLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp16"
        android:layout_marginBottom="@dimen/dp24"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/foreground_grey"
        app:cardCornerRadius="@dimen/dp8"
        app:cardElevation="@dimen/dp8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp8">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/cvGoogleLogin"
                android:layout_width="@dimen/dp40"
                android:layout_height="@dimen/dp40"
                android:src="@drawable/google"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp8"
                android:text="@string/or_sign_up_with"
                android:textColor="@color/blue2"
                app:layout_constraintBottom_toBottomOf="@id/cvGoogleLogin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cvGoogleLogin"
                app:layout_constraintTop_toTopOf="@id/cvGoogleLogin" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>